--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
-  text-align: center;
+/* Scrollbar Track */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 10px; /* Set the width of the scrollbar */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Scrollbar Thumb */
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #3c3e4a; /* Set the color of the thumb */
+  border-radius: 6px; /* Add rounded corners to the thumb */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Scrollbar Track */
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent; /* Set the background of the track */
 }
